--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
   "homepage": "https://github.com/Tokhalyan/food-festival#readme",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "image-webpack-loader": "^8.1.0",
     "jquery": "^3.6.0",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0",
+    "webpack-bundle-analyzer": "^4.5.0"
   }
 }
